--- a/src/station11.html
+++ b/src/station11.html
@@ -9,6 +9,36 @@
   <body>
     <main>
       <form action="" method="post">
+        <p class="item">
+          <label>
+            <input type="email" id="email" required />
+              <!-- size="20" -->
+              <!-- placeholder="例: 山田 太郎"  -->
+            <span>メールアドレス
+              <!-- <span class="notice">必須</span> -->
+            </span>
+           <label>
+        </p>
+        <p class="item">
+          <label>
+            <input type="password" id="password" required minlength="6"/>
+              <!-- size="20" -->
+              <!-- placeholder="例: 山田 太郎"  -->
+            <span>パスワード
+              <!-- <span class="notice">必須</span> -->
+            </span>
+           <label>
+        </p>
+        <p class="item">
+          <label>
+            <input type="text" id="nickname" maxlength="20"/>
+              <!-- size="20" -->
+              <!-- placeholder="例: 山田 太郎"  -->
+            <span>ニックネーム
+              <!-- <span class="notice">必須</span> -->
+            </span>
+           <label>
+        </p>
         <button type="submit">送信</button>
       </form>
     </main>
