--- a/src/station12.html
+++ b/src/station12.html
@@ -9,7 +9,7 @@
   <body>
     <!-- この<p>の中にレスポンスをコピペする -->
     <p>
-
+      {"message":"https:\/\/images.dog.ceo\/breeds\/collie-border\/n02106166_59.jpg","status":"success"}
     </p>
     <button onclick="fetchApi()">リクエスト</button>
   </body>
