--- a/src/station13.html
+++ b/src/station13.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main>
-      <p id="text">背景色が変わります。</p>
+      <p id="text1">背景色が変わります。</p>
       <div class="mt-ios">
         <input id="check" type="checkbox" />
         <label for="check"></label>
